feat: complete all the installation instructions